environment variable LANG before running weewx.

Changed default QC barometric low from 28 to 26. Added inTemp,
inHumidity, and rain.

Ranges in MinMax QC can now include units.

When QC rejects values it now logs the rejection.

Introduced a new unit system, METRICWX. Similar to METRIC, it uses
mm for rain, mm/hr for rain rate, and m/s for speed.

Font handles are now cached in order to work around a memory leak in PIL.

Image margins now scale with image and font sizes.

Now works with the pure Python version of Cheetah's NameMapper.

Fixed bug that prevented weewx from working with Python v2.5.

Fixed bug in SummaryByMonth and SummaryByYear that would result in duplicate
month/year entries when generating from multiple ByMonth or ByYear templates.

Consolidated pressure calculation code in ws23xx, ws28xx, te923, and fousb.

Catch USB failures when reading Fine Offset archive interval.

Added Vantage types stormRain and windSpeed10 to the list of observation
types.

Simulator now generates types dewpoint, pressure, radiation, and UV.

Fixed parsing of locations in the xtide forecast.

Minor cleanup to Standard skin for better out-of-the-box behavior:
 - default to no radar image instead of having every station point to Oregon
 - not every WMR100 is a WMR100N

2.5.1 12/30/13

Added UV plots to the templates. They will be shown automatically if you
have any UV data.

Fixed bug when reading cooling_base option.

Default to sane behavior if skin does not define Labels.

Fixed bug in setting of CheetahGenerator options.

Fixed qsf and qpf summary values in forecast module.

Fixed handling of empty sky cover fields in WU forecasts.

Forecast module now considers the fctcode, condition, and wx fields for
precipitation and obstructions to visibility.

Added options to forecast module to help diagnose parsing failures and new
forecast formats.

Added retries when saving forecast to database and when reading from database.
